[package]
name = "rest_bitcoin_payable_address_creator"
version = "0.0.1"
edition = "2018"

[dependencies]
rust-crypto = "0.2.36"
actix-web = "4.3.1"
secp256k1 = "0.15.3"
rand = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
rust-base58 = "0.0.4"
bech32 = "0.7.1"
hex = "0.3.2"
serde_json = "1.0"